# WARNING: head commit changed in the meantime
Change-Id: I3011b96a1ac6c27e6b41f64b61069f3072566a05

--- a/WebContent/torneo/torneoListAJAX.html
+++ b/WebContent/torneo/torneoListAJAX.html
@@ -17,9 +17,9 @@ $(function()
 		success: function(dati)
 				{
 					var tornei = dati.tornei;
-					ris = "<table border='1'>";
+					ris = "<table align='center' border='1'>";
 					ris += "<thead>";
-					ris += "<th>Nome Torneo</th><th>Anno</th>";
+					ris += "<th>Nome Torneo</th><th>Anno Edizione</th>";
 					ris += "</thead>";
 					ris += "<tbody>";
 					for (i = 0; i < tornei.length; i++)
