--- a/WebContent/atleta/atletaListAJAX.html
+++ b/WebContent/atleta/atletaListAJAX.html
@@ -3,42 +3,86 @@
 <head>
 <script type="text/javascript" src="../js/jquery-3.1.1.js"></script>
 <script type="text/javascript">
-
-// chiamo la ready function che verrà eseguita dopo il caricamento di tutti gli elementi del DOM
-
-$(function()
+function prova(){
+	alert("Prova");
+}</script>
+<script type="text/javascript">
+function printTabella()
 {
 	// eseguo la chiamata ajax per recuperare i dati
 	$.ajax(
 	{
 		type: "GET",
-		url: "../json/torneiJSON.action",	// chiamata che mi da i dati in formato json
+		url: "../json/atletiJSON.action",	// chiamata che mi da i dati in formato json
 		dataType: "json",
 		success: function(dati)
 				{
-					var tornei = dati.tornei;
-					ris = "<table align='center' border='1'>";
+					var atleti = dati.atleti;
+					var scelta = $('#selectSocieta').val();
+					ris = "<table border='1'>";
 					ris += "<thead>";
-					ris += "<th>Nome Torneo</th><th>Anno Edizione</th>";
+					ris += "<th>Nome Atleta</th><th>Cognome Atleta</th><th>Società</th><th>Anno Iscrizione</th>";
 					ris += "</thead>";
 					ris += "<tbody>";
-					for (i = 0; i < tornei.length; i++)
+					for (i = 0; i < atleti.length; i++)
 					{
-						ris += "<tr><td>" + tornei[i].nome + "</td>";
-						ris += "<td>" + tornei[i].annoEdizione + "</td></tr>";
+						if (scelta == '-1' || scelta == atleti[i].societa.id){
+							ris += "<tr><td>" + atleti[i].nome + "</td>";
+							ris += "<td>" + atleti[i].cognome + "</td>";
+							ris += "<td>" + atleti[i].societa.nome + "</td>";
+							ris += "<td>" + atleti[i].annoIscrizione + "</td></tr>";
+						}
 					}
 					ris += "</tbody>";
 					ris += "</table>";
+					
 					$("#target").html(ris);
 				},
 		error: function(){alert("Chiamata fallita!");}
 	});	
+}
+</script>
+<script type="text/javascript">
+
+$(function()
+{
+	$.ajax(
+	{
+		type: "GET",
+		url: "../json/societaJSON.action",
+		dataType: "json",
+		success: function(dati)
+			{
+				var societas = dati.societas;
+				ris = "<option value='-1'>Tutte le società</option>";
+				for (i = 0; i < societas.length; i++)
+				{
+					ris += "<option value='" + societas[i].id +"'>" + societas[i].nome + "</option>";
+				}
+				$("#selectSocieta").html(ris);
+			}
+	});
 });
+
+</script>
+
+<script type="text/javascript">
+
+// chiamo la ready function che verrà eseguita dopo il caricamento di tutti gli elementi del DOM
+
+$(printTabella);
 </script>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Lista Tornei</title>
 </head>
 <body>
+
+Filtra Società: <select id="selectSocieta" name="id_societa"></select>
+<script type="text/javascript">
+$('#selectSocieta').bind('change', printTabella);
+</script> 
+
+
 <div id="target"></div>
 </body>
 </html>
