--- a/WebContent/atleta/atletaListAJAX.html
+++ b/WebContent/atleta/atletaListAJAX.html
@@ -1,88 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
 <script type="text/javascript" src="../js/jquery-3.1.1.js"></script>
-<script type="text/javascript">
-function prova(){
-	alert("Prova");
-}</script>
-<script type="text/javascript">
-function printTabella()
-{
-	// eseguo la chiamata ajax per recuperare i dati
-	$.ajax(
-	{
-		type: "GET",
-		url: "../json/atletiJSON.action",	// chiamata che mi da i dati in formato json
-		dataType: "json",
-		success: function(dati)
-				{
-					var atleti = dati.atleti;
-					var scelta = $('#selectSocieta').val();
-					ris = "<table border='1'>";
-					ris += "<thead>";
-					ris += "<th>Nome Atleta</th><th>Cognome Atleta</th><th>Societ‡</th><th>Anno Iscrizione</th>";
-					ris += "</thead>";
-					ris += "<tbody>";
-					for (i = 0; i < atleti.length; i++)
-					{
-						if (scelta == '-1' || scelta == atleti[i].societa.id){
-							ris += "<tr><td>" + atleti[i].nome + "</td>";
-							ris += "<td>" + atleti[i].cognome + "</td>";
-							ris += "<td>" + atleti[i].societa.nome + "</td>";
-							ris += "<td>" + atleti[i].annoIscrizione + "</td></tr>";
-						}
-					}
-					ris += "</tbody>";
-					ris += "</table>";
-					
-					$("#target").html(ris);
-				},
-		error: function(){alert("Chiamata fallita!");}
-	});	
-}
-</script>
-<script type="text/javascript">
+<script type="text/javascript" src="../js/myFunctions.js"></script>
 
-$(function()
-{
-	$.ajax(
-	{
-		type: "GET",
-		url: "../json/societaJSON.action",
-		dataType: "json",
-		success: function(dati)
-			{
-				var societas = dati.societas;
-				ris = "<option value='-1'>Tutte le societ‡</option>";
-				for (i = 0; i < societas.length; i++)
-				{
-					ris += "<option value='" + societas[i].id +"'>" + societas[i].nome + "</option>";
-				}
-				$("#selectSocieta").html(ris);
-			}
-	});
-});
-
-</script>
-
-<script type="text/javascript">
-
-// chiamo la ready function che verr‡ eseguita dopo il caricamento di tutti gli elementi del DOM
-
-$(printTabella);
-</script>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<script type="text/javascript">$(initSelectSocieta);</script>
+<script type="text/javascript">$(initSelectSquadre);</script>
+<script type="text/javascript">$(initSelectTornei);</script>
+<script type="text/javascript">$(printTabella);</script>
 <title>Lista Tornei</title>
 </head>
 <body>
 
-Filtra Societ‡: <select id="selectSocieta" name="id_societa"></select>
+Filtra Societ√†: <select id="selectSocieta"></select>
 <script type="text/javascript">
 $('#selectSocieta').bind('change', printTabella);
-</script> 
-
-
+</script>
+Filtra Squadra: <select id="selectSquadra"></select>
+<script type="text/javascript">
+$('#selectSquadra').bind('change', printTabella);
+</script>
+Filtra Torneo: <select id="selectTorneo"></select>
+<script type="text/javascript">
+$('#selectTorneo').bind('change', printTabella);
+</script>
 <div id="target"></div>
 </body>
 </html>
