--- a/WebContent/testJqueryAjax.html
+++ b/WebContent/testJqueryAjax.html
@@ -6,7 +6,7 @@
 $(function(){
 	$.ajax(
 	{
-		url: "squadra/getSquadreJSON.action",
+		url: "json/squadreJSON.action",
 		dataType: "json",
 		success: function(data)
 		{
