--- a/WebContent/atleta/atletaList_new.html
+++ b/WebContent/atleta/atletaList_new.html
@@ -111,11 +111,11 @@ $(function()
 											td1.text(dati.atleti[i].id);
 											var td2 = $("<td>");
 											td2.text(dati.atleti[i].nome);
-											//var td3 =$("<td>");
-											//td3.text(dati.atleti[i].societa.nome);
+											var td3 =$("<td>");
+											td3.text(dati.atleti[i].societa.nome);
 											tr.append(td1);
 											tr.append(td2);
-											//tr.append(td3);
+											tr.append(td3);
 											table.append(tr);
 
 									}
